--- a/bibliography.html
+++ b/bibliography.html
@@ -66,15 +66,109 @@
 		
 		
 	<main>
-
 		
+		<h2>Bibliography</h2>
+
+	  <p>4Shared, 2023. Search, Store and Share easily. [Online] <br>
+	    Available at: https://www.4s.io/<br>
+	    [Accessed 23 February 2023].<br>
+	    AIB Merchant Services,  2023. Merchant Services. [Online] <br>
+	    Available at: https://www.aibms.com/solutions/#online<br>
+	    [Accessed 4 March 2023].<br>
+	    Amazon, 2023. Amazon  pay. [Online] <br>
+	    Available at: https://pay.amazon.com/<br>
+	    [Accessed 4 March 2023].<br>
+	    Android Authority,  2022. Mobile Technology. [Online] <br>
+	    Available at: https://www.androidauthority.com/what-is-sms-280988/<br>
+	    [Accessed 23 February 2023].<br>
+	    Bambora, 2023. Payments  to grow your business. [Online] <br>
+	    Available at: https://www.bambora.com/en/us/<br>
+	    [Accessed 4 March 2023].<br>
+	    Bank of Ireland, 2023. Business  Banking. [Online] <br>
+	    Available at: https://businessbanking.bankofireland.com/payments-and-cards/cards/boi-payment-acceptance/benefits/<br>
+	    [Accessed 4 March 2023].<br>
+	    Bitcoin, 2023. Bitcoin  for Businesses. [Online] <br>
+	    Available at: https://bitcoin.org/en/bitcoin-for-businesses<br>
+	    [Accessed 4 March 2023].<br>
+	    Canva, 2023. Retail  Website. [Online] <br>
+	    Available at: https://www.canva.com/design/DAFcanHiQjk/eEfXCy_E2SNUOFHMhzjSIA/edit<br>
+	    [Accessed 6 March 2023].<br>
+	    Cisco, 2023. Small  Business Resource Center. [Online] <br>
+	    Available at: https://www.cisco.com/c/en_in/solutions/small-business/resource-center/unified-communications/voip-how.html<br>
+	    [Accessed 21 February 2023].<br>
+	    Computerworld, 2021. File  sharing services. [Online] <br>
+	    Available at: https://www.computerworld.com/article/3632983/top-file-sharing-services-dropbox-box-google-drive-onedrive-more.html<br>
+	    [Accessed 23 February 2023].<br>
+	    CRM, 2023. CRM. [Online] <br>
+	    Available at: https://crm.org/crmland/best-crm-software#:~:text=Here%E2%80%99s%20ou<br>
+	    [Accessed 4 March 2023].<br>
+	    EcommerceCEO, 2021. What  is Ecommerce. [Online] <br>
+	    Available at: https://www.ecommerceceo.com/learn/what-is-ecommerce/<br>
+	    [Accessed 24 February 2023].<br>
+	    GoDaddy, 2023. Websites  + Marketing. [Online] <br>
+	    Available at: https://www.godaddy.com/en-ie<br>
+	    [Accessed 6 March 2023].<br>
+	    Google, 2023. Google  search. [Online] <br>
+	    Available at: https://www.google.ie/search?q=search+information+on+the+world+wide+web&amp;source=hp&amp;ei=OXr3Y9DkK9aZ8gLb14LwDA&amp;iflsig=AK50M_UAAAAAY_eISTrVy0NT6cLZrSzj88ehaL4QKOvZ&amp;oq=information+search+on+the&amp;gs_lcp=Cgdnd3Mtd2l6EAEYATIFCAAQgAQyCQgAEBYQHhDxBDIJCAAQFhAeEPEEMgY<br>
+	    [Accessed 23 February 2023].<br>
+	    HostingAdvice, 2023. Best  File Hosting Services 2023. [Online] <br>
+	    Available at: https://www.hostingadvice.com/how-to/best-file-hosting-services/<br>
+	    [Accessed 23 February 2023].<br>
+	    Ionos Digital Guide,  2022. Internet Relay Chat. [Online] <br>
+	    Available at: https://www.ionos.com/digitalguide/server/know-how/irc/<br>
+	    [Accessed 23 February 2023].<br>
+	    LimeWire , 2022. LimeWire2022.  [Online] <br>
+	    Available at: http://www.limewireofficial.com/<br>
+	    [Accessed 23 February 2023].<br>
+	    Microsoft, 2023. Audio  Conferencing in Microsoft 365. [Online] <br>
+	    Available at: https://learn.microsoft.com/en-us/microsoftteams/audio-conferencing-in-office-365<br>
+	    [Accessed 21 February 2023].<br>
+	    Microsoft, 2023. Teams.  [Online] <br>
+	    Available at: https://www.microsoft.com/en-us/microsoft-teams/teams-for-home/organization<br>
+	    [Accessed 23 February 2023].<br>
+	    Mitel, 2022. What is  Audio Conferencing. [Online] <br>
+	    Available at: https://www.mitel.com/features-benefits/audio-conferencing<br>
+	    [Accessed 21 February 2023].<br>
+	    Norton, 2023. Norton.  [Online] <br>
+	    Available at: https://us.norton.com/#<br>
+	    [Accessed 23 February 2023].<br>
+	    Oracle, 2023. Content  Management. [Online] <br>
+	    Available at: https://www.oracle.com/content-management/what-is-cms/<br>
+	    [Accessed 4 March 2023].<br>
+	    Salesforce, 2023. CRM  101. [Online] <br>
+	    Available at: https://www.salesforce.com/crm/what-is-crm/<br>
+	    [Accessed 4 March 2023].<br>
+	    SAP, 2023. Supply  Chain Management. [Online] <br>
+	    Available at: https://www.sap.com/products/scm.html<br>
+	    [Accessed 4 March 2023].<br>
+	    Skype, 2023. Skype. [Online] <br>
+	    Available at: https://www.skype.com/en/<br>
+	    [Accessed 21 February 2023].<br>
+	    Stripe, 2023. Payments  infraxtructure for the internet. [Online] <br>
+	    Available at: https://stripe.com/en-ie<br>
+	    [Accessed 4 March 2023].<br>
+	    Sumup, 2023. Get  Paid with Payments Links. [Online] <br>
+	    Available at: https://www.sumup.com/en-ie/payment-links/<br>
+	    [Accessed 4 March 2023].<br>
+	    Webex, 2023. What is  video conferencing. [Online] <br>
+	    Available at: https://www.webex.com/what-is-video-conferencing<br>
+	    [Accessed 21 February 2023].<br>
+	    Webex, 2023. What is  VoIP. [Online] <br>
+	    Available at: https://www.webex.com/what-is-voip.html<br>
+	    [Accessed 21 February 2023].<br>
+	    WordPress, 2023. Most  popular website builder. [Online] <br>
+	    Available at: https://wordpress.com/<br>
+	    [Accessed 6 March 2023].<br>
+	    Zoom, 2023. Zoom. [Online] <br>
+	    Available at: https://zoom.us/<br>
+	    [Accessed 21 February 2023].</p>
     </main>
 
 	
 		
 		
 	<footer>
-		<h2>Bridget Chawke 2023</h2>
+	  <h2>Bridget Chawke 2023</h2>
 		</footer>
 		
 	
