--- a/development_of_the_internet.html
+++ b/development_of_the_internet.html
@@ -4,7 +4,11 @@
 <meta charset="utf-8">
 <title>CSS-Cascading Style Sheets</title>
 	<style>
-	
+		table{
+			margin-left: auto;
+			margin-right: auto;
+			padding-top: 20px;
+		}
 	</style>
 	<link href="Styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -64,15 +68,95 @@
 		
 		
 	<main>
-
-		
+	  <table border="1" cellspacing="0" cellpadding="0" width="612">
+	    <tr>
+	      <td width="612" colspan="2"><p align="center"><strong></strong>Development    of the Internet</strong></p></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>1950</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>Modem    was invented by Bell Labs</li>
+	        <li>First    workable prototype of Internet created and funded by U.S. Department of    Defence -ARPA</li>
+	        <li>First    manmade satellite launched by USSR</li>
+	        </ul></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>1960</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>ASCII    was developed</li>
+	        <li>First    WAN – via dialup</li>
+	        <li>First    data packet was sent</li>
+	        </ul></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>1970</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>Ethernet    was invented and the term &ldquo;Internet&rdquo; was coined</li>
+	        <li>Email    was invented</li>
+	        <li>IP    address register set up</li>
+	        <li>TCP/IP    developed</li>
+	        <li>First    Non-US Arpanet link in London</li>
+	        </ul></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>1980</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>The    internet expanded across the globe</li>
+	        <li>ARPAnet    adopts TCP/IP</li>
+	        <li>WWW    created by Tim Berners-Lee</li>
+	        </ul>
+	        <p>&nbsp;</p></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>1990</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>NeXT    became world&rsquo;s first internet server</li>
+	        <li>Mosaic    was the first browser</li>
+	        <li>WWW    opens to the public – commercial internet was developed</li>
+	        <li>Netscape,    Amazon and eBay founded</li>
+	        <li>VOIP    developed</li>
+	        <li>Dial    up modem with speeds of 56kbps!</li>
+	        <li>First    mobile phone with internet connection</li>
+	        </ul>
+	        <p>&nbsp;</p></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>2000</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>Broadband    was developed –ADSL</li>
+	        <li>Wi-Fi    invented</li>
+	        <li>Wikipedia    and Chrome appeared</li>
+	        <li>HTML    5 </li>
+	        <li>Social    media sites like Facebook, Twitter, YouTube and LinkedIn became popular.</li>
+	        </ul></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>2010</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>100    Mbs available through FTTC</li>
+	        <li>China    dominates internet usage</li>
+	        <li>More    social media platforms developed</li>
+	        <li>Artificial    Intelligence (A1) voice assistants became common</li>
+	        </ul></td>
+        </tr>
+	    <tr>
+	      <td width="306" valign="top"><p>2020</p></td>
+	      <td width="306" valign="top"><ul>
+	        <li>Speeds    of up to 1Gbps available using Fibre to the Home (FTTH)</li>
+	        <li>5G    mobile</li>
+	        <li>Cash    Transfers widely used e.g. Revolut</li>
+	        <li>Cryptocurrencies </li>
+	        <li>Latest    social media platform TikTok </li>
+	        </ul></td>
+        </tr>
+      </table>
     </main>
 
 	
 		
 		
 	<footer>
-		<h2>Bridget Chawke 2023</h2>
+	  <h2>Bridget Chawke 2023</h2>
 		</footer>
 		
 	
