--- a/web_authoring.html
+++ b/web_authoring.html
@@ -67,18 +67,36 @@
 	<main>
 		
 	<h2 id= "MyHeading1" style="padding-top: 60px">Notepad</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam mollitia tenetur nesciunt velit sint molestias autem voluptatem necessitatibus, aliquam facilis explicabo, quod saepe corporis alias magnam quam voluptates consequatur nostrum eveniet quasi quos ratione. Atque itaque quia sequi sit illum, quos facere earum cupiditate sunt magnam voluptate soluta vero accusantium aperiam tempora natus blanditiis totam, aut nostrum. At illum quos cupiditate, sapiente temporibus quod, atque ut quaerat pariatur. Nam, dolorem, culpa officiis praesentium sed magnam voluptate ullam aspernatur eum vero non dolore veniam ipsa quas exercitationem ducimus recusandae saepe corporis vitae ipsum ratione odit, accusamus dolores porro deleniti. Quaerat repellendus tenetur ab quasi, error quia, et consequuntur blanditiis. Veritatis dolorem ducimus blanditiis soluta quasi. Asperiores ut sit quaerat sequi veritatis expedita ipsum nesciunt, qui hic reprehenderit laboriosam consequuntur sint! Nihil pariatur, quisquam architecto. Quibusdam modi harum vero, odit id saepe ab dicta ex cumque ullam quas, totam, fugit, at sapiente excepturi placeat cupiditate. Iure inventore incidunt amet ratione nihil reiciendis magni molestias modi excepturi mollitia recusandae molestiae ea aspernatur cupiditate illo tempore quos, deserunt ex! Ea aliquid nostrum laboriosam nesciunt. Quasi perspiciatis fugiat quos molestiae optio beatae tenetur cupiditate, maxime eum. Vel, repudiandae doloremque esse consequatur ad velit, quos, impedit aspernatur distinctio voluptates voluptatum repellat officia facere. Quibusdam consequatur modi animi quidem et adipisci repellendus corrupti deleniti, quasi facilis eius saepe ab, assumenda molestiae facere autem delectus alias fugiat rerum praesentium cumque id aliquid illo dolore. Fugiat quia minima est possimus maxime quis sapiente, inventore neque unde eum ut! Ipsa dicta magni ea omnis voluptates voluptatum, recusandae aspernatur officia animi ipsam soluta alias vero et! Inventore ea officia tempore aut, necessitatibus recusandae repellendus sunt ipsa reprehenderit dolorum nulla distinctio laudantium deserunt? Modi soluta nobis sit, blanditiis eum facere, vitae obcaecati. Cum, laborum quia! Culpa asperiores sequi quos delectus laboriosam, odio.</p>
-	<h2 id= "MyHeading2" style="padding-top: 60px">Notepad++</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore harum molestiae nihil debitis dolore, accusantium officiis id autem, rerum aliquid. Harum pariatur veniam earum, veritatis ut nesciunt adipisci cupiditate necessitatibus, eum aspernatur officia doloribus molestias nihil commodi minus magni omnis natus deserunt corrupti. Accusantium dolorum corporis tempora id nam molestiae quasi tempore porro, est repellendus! Iste tempora minus hic ipsam repellat aperiam doloremque dicta magni, aliquam quo quam, repellendus molestias natus odio distinctio alias autem, maxime facere placeat explicabo ea. Fugit officiis nemo possimus reiciendis est eius eos deleniti ullam, odio sapiente? Dolore illum officiis, est quaerat modi autem id quibusdam! Culpa officiis accusantium quisquam atque maxime tenetur at beatae! Eligendi numquam, laborum molestias suscipit cum, quas totam ipsam similique ad officia, voluptates ipsum harum minus ea libero perferendis aut facilis ullam vel ducimus labore asperiores commodi, iste. Quod eligendi, illum quo natus esse provident, nisi facere explicabo culpa magni facilis quasi tempore, itaque molestias suscipit doloremque rem ad omnis. Veniam distinctio nemo quis, rerum, enim consectetur eum, vitae itaque laborum quibusdam sapiente consequatur minus cumque eveniet aperiam, at ut reprehenderit voluptates sit pariatur ipsam cum tempore. Neque natus amet facilis, blanditiis magnam recusandae saepe vero! Accusamus dicta, tempora tempore, laborum impedit fugiat reiciendis ab eveniet deserunt eaque ipsam aliquam eligendi incidunt ipsum exercitationem eius a repellat alias officia! Vitae aspernatur accusamus, adipisci facilis nostrum ipsa aut possimus quaerat voluptate labore perspiciatis dolores ab, ea iusto architecto cumque tempora eligendi voluptates minima totam debitis quia veniam. Rerum aut, expedita autem facere dicta exercitationem dolorem, corporis ipsa minus tempora sunt minima quis deleniti, molestias quas ab explicabo. Distinctio dolorem eius ad repudiandae, expedita velit quaerat, nemo. Fugiat incidunt facilis accusantium delectus recusandae, consectetur animi fuga, amet. Animi est, reiciendis, modi, fugit recusandae aspernatur officiis impedit libero nostrum sapiente nobis voluptate unde.</p>
-	<h2 id= "MyHeading3" style="padding-top: 60px">Dreamweaver</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit quos praesentium, voluptatum atque facere tenetur ad ea beatae. Unde, perferendis autem corporis eveniet doloremque itaque neque, minus! Quo ipsam, minima, similique beatae mollitia nisi recusandae ullam eius nihil eum perspiciatis vero. Quo fuga ex nesciunt cupiditate aspernatur sint, qui quasi voluptates doloremque maxime repellendus quae aliquam natus, voluptatibus dolorem? Corrupti asperiores, recusandae, fugiat adipisci hic temporibus sapiente, error nesciunt ut unde quisquam animi vitae sunt molestias id provident delectus consectetur architecto ad. Eius illo error enim quae eaque repellat ab culpa quibusdam reprehenderit vitae quisquam hic, repellendus, cumque ratione fugit consectetur mollitia nesciunt. Cumque soluta cupiditate expedita voluptas aliquam veritatis voluptatum atque, nobis, provident, ullam nulla voluptatem obcaecati iste autem. Veniam error non dolores aliquam laudantium? Laboriosam dolore veritatis, iure. Officia possimus in, dolorem sequi est! Unde ex odit dignissimos, debitis quas harum nulla est nisi dolores! Nobis, harum debitis iusto similique! Sit atque alias cupiditate, voluptatem doloremque totam accusantium nostrum at, ipsa, enim voluptatibus facere reprehenderit accusamus ad laudantium, debitis consequatur. Porro nobis placeat eaque necessitatibus ipsum obcaecati sapiente quis. Molestias assumenda expedita velit harum incidunt fugiat reiciendis et blanditiis maiores quidem atque est omnis id cupiditate sapiente ipsa, voluptatem quam reprehenderit eligendi, eveniet, culpa deserunt dicta. Labore nam obcaecati facere accusamus voluptas, quo non accusantium expedita, iure omnis minima animi, doloribus hic illo qui est tenetur provident quam vel error architecto nisi consectetur. Molestiae error officia sed laborum omnis quis ipsa repellendus accusantium enim sequi expedita suscipit modi facere beatae ratione, culpa similique dicta ullam consectetur quaerat dolorum at possimus! Perspiciatis quidem non ipsam asperiores totam libero magnam qui delectus nihil soluta quos id pariatur quaerat fugit hic saepe harum maxime eum ut officia nam ad consequatur ullam, cum! Amet, quos! Exercitationem sed eligendi consequuntur, aliquid. Commodi, nihil.</p>
-    </main>
+	  <p>Notepad is a basic application with no colour and no error  detection.</p>
+	  <img src="images/Notepad.png" width="541" height="957" alt=""/>
+<h2 id= "MyHeading2" style="padding-top: 60px">Notepad++</h2>
+		
+	  <p>Notepad++ introduces colour and error detection.</p>
+	  <img src="images/Notepad++.png" width="879" height="757" alt=""/>
+<h2 id= "MyHeading3" style="padding-top: 60px">Dreamweaver</h2>
+		
+	  <p>Dreamweaver is a web development tool from Adobe which is a  faster and easier way to design, code and publish websites.</p>
+	  <img src="images/Dreamweaver.png" width="985" height="556" alt=""/> 
+		<br><br><br><br>
+		
+		<h2>Similar Design Options</h2>
+		
+		<h3>WordPress:</h3>
+        <p>WordPress is a content management system used mostly by  bloggers and small businesses.  (WordPress, 2023)</p>
+	  <img src="images/WordPress.png" width="884" height="950" alt=""/> 
+		<h3>GoDaddy:</h3>
+        <p>GoDaddy is an internet domain registrar and web hosting  company.</p>
+	  <img src="images/GoDaddy.png" width="853" height="801" alt=""/> 
+		
+		<h3>Canva:</h3>
+        <p>Canva also have an easy web design option. (Canva, 2023)</p>
+	  <img src="images/Canva.png" width="955" height="472" alt=""/> </main>
 
 	
 		
 		
 	<footer>
-		<h2>Bridget Chawke 2023</h2>
+	  <h2>Bridget Chawke 2023</h2>
 		</footer>
 		
 	
